--- a/styles/style.css
+++ b/styles/style.css
@@ -669,6 +669,9 @@ footer div a {
 
 /* MAJOR BREAKPOINT 1: small desktop & portrait tablet */
 @media (max-width: 1000px) {
+  header {
+    background-attachment: fixed;
+  }
   header h1 {
     font-size: 7.2rem;
   }
